syntax = "proto3";
import "akkaserverless/annotations.proto";

package actor.chat.domain;

message Message {
  string text = 1;
}

message MessageAdded {
  string chat_id = 1 [(akkaserverless.field).entity_key = true];
  Message message = 2;
}

message ChatState {
  repeated Message messages = 1;
}

